--- a/app/assets/stylesheets/views/_devise.scss
+++ b/app/assets/stylesheets/views/_devise.scss
@@ -38,52 +38,12 @@
     }
   }
 
-  .signup-switcher {
-    position: absolute;
-    top: 170px;
-    right: 0;
-
-    a {
-      display: block;
-      background: #fff;
-      padding: 5px 20px;
-      margin-bottom: 10px;
-      border-radius: 3px 0 0 3px;
-      color: #3A3A3A;
-      border: 1px solid #C9DBF5;
-      border-right: 0;
-      text-decoration: none;
-
-      &[data-class=""] {
-        background: #5A7A9E;
-        color: #fff;
-        border-color: #8DA5C4;
-
-        .fa-check {
-          color: #fff;
-        }
-      }
-
-      &.active {
-        .fa-check {
-          opacity: 1;
-        }
-      }
-
-      .fa-check {
-        color: #83C490;
-        font-size: 14px;
-        position: relative;
-        top: 1px;
-        right: 6px;
-        margin-right: 5px;
-        opacity: 0;
-
-        @include transition(all .2s linear);
-      }
+  #error_explanation {
+    h2 {
+      font-size: 26px;
     }
   }
-
+  
   .logo {
     text-align: center;
     display: block;
