Implemented Devise omniauthable to User model
using Facebook, Twitter and Google+ provides

--- a/app/assets/stylesheets/_config.scss
+++ b/app/assets/stylesheets/_config.scss
@@ -19,4 +19,9 @@ $helvetica: "Helvetica Neue", Arial;
 $sidebarBg: #2F343D;
 $maxMedium: 991px;
 $minMedium: 768px;
-$maxSmall: 767px;
+$maxSmall:  767px;
+
+$twitter:  #00ACED;
+$facebook: #3B5998;
+$google:   #DD4B39;
+$linkedin: #007BB6;
