--- a/app/assets/stylesheets/bootstrap/_bootstrap-overrides.scss
+++ b/app/assets/stylesheets/bootstrap/_bootstrap-overrides.scss
@@ -73,6 +73,13 @@
   background: #D66363;
 }
 
+/* ==============================================================================
+// Alerts
+// ============================================================================== */
+.alert {
+  border-radius: 0;
+}
+
 
 /* ==============================================================================
 // Buttons
