User name attribute decomposed to first and last name attributes

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,8 @@
     </div>
     
     <div class="fields">
-      <%= f.label :name, "Your name" %>
-      <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
+      <%= f.label :full_name, "Your name" %>
+      <%= f.text_field :full_name, class: "form-control", placeholder: "John Doe" %>
     </div>
     
     <div class="fields">
