Refactored Identity providers constant

--- a/app/assets/stylesheets/views/_devise.scss
+++ b/app/assets/stylesheets/views/_devise.scss
@@ -110,6 +110,9 @@
         background-color: $google;
         border-color: darken($google, 7%)
       }
+      .fa-google_oauth2::before {
+        content: "\f1a0";
+      }
     }
 
     .fields {
