Displayed user's name in mailers
instead of user's email

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<h4 class="heading">Welcome <strong><%= @resource.email %></strong>!</h4>
+<h4 class="heading">Welcome <strong><%= @resource.display_name %></strong>!</h4>
 
 <p class="info">You can confirm your account email through the link below.</p>
 
