--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,4 +1,4 @@
-<h4 class="heading">Hello <strong><%= @resource.email %></strong>!</h4>
+<h4 class="heading">Hello <strong><%= @resource.display_name %></strong>!</h4>
 
 <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
