--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<h4 class="heading">Hello <strong><%= @resource.email %></strong>!</h4>
+<h4 class="heading">Hello <strong><%= @resource.display_name %></strong>!</h4>
 
 <p class="info">Someone has requested a link to change your password. You can do this through the link below.</p>
 
