--- a/app/views/devise/registrations/_form_fields.html.erb
+++ b/app/views/devise/registrations/_form_fields.html.erb
@@ -45,4 +45,6 @@
 
 <div class="actions">
   <%= f.submit f.object.persisted? ? "Update account" : "Sign up", class: "btn btn-success btn-lg" %>
+  &nbsp; &nbsp;
+  <%= link_to "Cancel my account", registration_path(resource_name), class: "btn btn-default btn-md", data: { confirm: "Are you sure?" }, method: :delete if f.object.persisted? %>
 </div>
