Improved alert message for complete registration

--- a/app/views/devise/registrations/_form_fields.html.erb
+++ b/app/views/devise/registrations/_form_fields.html.erb
@@ -1,6 +1,7 @@
 <% if f.object.temp_email? && f.object.sign_in_count <= 1 %>
-  <div class="alert alert-info" role="alert">
-    Since this is your first login please provide us your <strong>valid email address</strong> and <strong>setup your password</strong>.
+  <div class="alert alert-info text-center" role="alert">
+    Since this is your first login please provide us <br />
+    <strong>your valid email address</strong> and <strong>setup your password</strong>.
   </div>
   <br />
 <% end %>
